Complete Employee Management System with JSP views and configuration
Co-authored-by: Utkarssh11 <114795899+Utkarssh11@users.noreply.github.com>